--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="msvalidate.01" content="6272E19CFAEECB12269B8BD379D928AB" />
     <title>My Webpage</title>
     <style>
         body {
